--- a/css/modules.css
+++ b/css/modules.css
@@ -13,6 +13,10 @@ h1 {
   font-size: 15vw;
 }
 
+.animate {
+  -webkit-animation: bounceInDown 1s;
+}
+
 h2 {
   display: flex;
   font-size: 8vw;
@@ -56,6 +60,10 @@ li {
     display: flex;
     justify-content: center;
     font-size: 5em;
+  }
+
+  .animate {
+    -webkit-animation: bounceInDown 1s;
   }
 
   h2 {
