--- a/css/modules.css
+++ b/css/modules.css
@@ -1,3 +1,8 @@
+#about {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+
 .main-nav ul {
   display: flex;
   flex-direction: row;
@@ -11,20 +16,23 @@ h1 {
   display: flex;
   justify-content: center;
   font-size: 15vw;
+  margin: -3px;
 }
 
 .animate {
   -webkit-animation: bounceInDown 1s;
 }
 
-h2 {
-  display: flex;
-  font-size: 8vw;
+h6 {
   text-align: center;
+  font-size: 10vw;
+  margin: -5px;
 }
 
 p {
+  text-align: center;
   text-decoration: none;
+  font-size: 2em;
 }
 
 #img {
@@ -54,8 +62,14 @@ li {
 @media only screen and (min-width: 800px){
 
   li {
-    font-size: 1vw;
+    font-size: 2vw;
   }
+
+  p {
+    font-size: 2vw;
+    text-align: center;
+  }
+
   h1 {
     display: flex;
     justify-content: center;
@@ -66,16 +80,16 @@ li {
     -webkit-animation: bounceInDown 1s;
   }
 
-  h2 {
-    display: flex;
+  h6 {
+    text-align: center;
     font-size: 4em;
+    margin: -5px;
   }
 
 .main-nav ul {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 0;
   list-style: none;
   clear: both;
 }
